# DataRift

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml  code_quality.yml  release.yml  security.yml
conf/: base.yaml  job_a.yaml  job_b.yaml  job_c.yaml  job_d.yaml  platforms.yaml
config/: __init__.py  gcs_config.py  iceberg_config.py  logging_config.py  pipeline_config.py  riot_config.py
docs/project/: 00-overview.md  01-architecture.md  02-gcs-layout.md  03-job-a-user-ingestion.md  04-job-b-matchid-ingestion.md  05-job-c-match-ingestion.md  06-job-d-iceberg-sync.md  07-project-structure.md  08-shared-modules.md  09-sprints.md
infra/: artifact_registry.tf  bigquery.tf  cloud_run_jobs.tf  gcs.tf  outputs.tf  pubsub.tf  secret_manager.tf  seed_secrets.py  variables.tf
infra/dev/: main.tf  variables.tf
infra/env/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/env/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/shared/modules/cloud_run_job/: jobs.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/shared/modules/cloud_run_job/job/: main.tf  outputs.tf  variables.tf
infra/shared/modules/pubsub/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
jobs/fetch_users/: Dockerfile  main.py  requirements.txt
jobs/fetch_users/pipeline/: __init__.py  buffer.py  fetcher.py  publisher.py  uploader.py
jobs/job_a_user_ingestion/: Dockerfile  main.py
jobs/job_b_distributor/: Dockerfile  main.py
jobs/job_b_worker/: Dockerfile  main.py
jobs/job_c_distributor/: Dockerfile  main.py
jobs/job_c_worker/: Dockerfile  main.py
jobs/parquet_writer/: Dockerfile  main.py  requirements.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/clients/: __init__.py  riot_client.py
src/datarift/: __init__.py
src/datarift/config/: __init__.py  loader.py
src/datarift/gcs/: __init__.py  paths.py
src/datarift/hashing/: __init__.py  shard.py  string_to_int.py
src/datarift/iceberg/: __init__.py  catalog.py  sync.py
src/datarift/parquet/: __init__.py  buffer.py  io.py
src/datarift/rate_limit/: __init__.py  checkpoint.py  scheduler.py  tmp_buffer.py
src/datarift/riot_client/: __init__.py  client.py  league_api.py  match_api.py  regions.py
src/datarift/workers/: __init__.py  match_fetcher.py  puuid_fetcher.py  threaded_queue.py
tests/: test_gcs_config.py  test_riot_client.py
tests/fetch_users/: __init__.py  test_buffer.py  test_fetcher.py  test_uploader.py
workspace/documents/: champion.json  match_example.json  runes.json  skills-lock.json  user_example.json
